feat: adding integration

--- a/src/app/pages/import/import.html
+++ b/src/app/pages/import/import.html
@@ -72,7 +72,7 @@
                 <label for="invoice-type" class="form-label">Tipo da Fatura</label>
                 <select id="invoice-type" class="form-select" [(ngModel)]="invoiceType" name="invoiceType">
                 <option>CREDIT_INVOICE</option>
-                <option>DEBIT_INVOICE</option>
+                <option>ACCOUNT_STATEMENT</option>
                 </select>
             </div>
             </div>
