--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ body {
 
 /* Layout Principal */
 .app-container {
-    max-width: 1280px;
+    max-width: 90%;
     margin-left: auto;
     margin-right: auto;
     display: flex;
