--- a/src/app/pages/budget/budget.html
+++ b/src/app/pages/budget/budget.html
@@ -67,7 +67,8 @@
                             <td class="text-right">{{ exp.value | currency:'BRL' }}</td>
                             <td class="remove-cell">
                                 <button class="remove-btn" (click)="removeExpense(i)">
-                                    <img src="/assets/icons/trash.svg" alt="Remover Despesa">
+                                    <img ngSrc="/assets/icons/trash.svg" alt="Remover Despesa" height="16" width="16"
+                                         style="filter: invert(1);">
                                 </button>
                             </td>
                         </tr>
@@ -84,8 +85,9 @@
 
         <div class="chart-section">
             <div class="card summary-card budget-summary-card">
-                <h2>Distribuição do Orçamento</h2>
-                <div class="chart-container">
+                <h2 class="text-center" style="margin: 0 auto; text-align: center; display: block; width: 100%;">
+                    Distribuição do Orçamento</h2>
+                <div class="chart-container" style="margin-top: 1.1rem">
                     <ng-container *ngIf="salary > 0 && (expenses.length > 0 || totalExpenses > 0); else noChart">
                         <canvas #budgetChartCanvas></canvas>
                     </ng-container>
