--- a/src/app/pages/budget/budget.html
+++ b/src/app/pages/budget/budget.html
@@ -39,6 +39,12 @@
                     <input type="number" id="expense-value" placeholder="Valor (R$)" min="0" step="0.01"
                            [(ngModel)]="expenseValue">
                 </div>
+                <div class="form-group category-select-container">
+                    <label for="expense-category">Categoria (Opcional)</label>
+                    <select id="expense-category" [(ngModel)]="selectedCategory">
+                        <option value="">Selecione uma categoria</option>
+                    </select>
+                </div>
                 <div class="add-expense-actions">
                     <div class="switch-container">
                         <span id="value-label" class="active"><i class="fas fa-dollar-sign"></i> R$</span>
